# raspi-bare-metal

./: Cargo.toml  README.md  raspi.ld
.cargo/: config.toml
.github/wiki/: Home.md
.github/workflows/: init-wiki.yml
src/: main.rs  panic.rs  start.s  uart.rs  usbsim.rs
